assets/widgets/Tabs.less
@import "../include.less";

/**
 * <div.tabs>    // container with bottom border
 *   <div.tabs-tabs> // container which applies max-width
 *     <a>text</a>
 *     <a aria-disabled="true">current tab</a>
 *   </div>
 * </div>
 */
.tabs {
    contain: layout style;
    background: var(--background-color);
    flex-basis: 100%;
}
.tabs-tabs {
    max-width: var(--layout-max-width);
    display: flex;
    margin: 0 auto;
    padding: 0 0 2px 0;
}
.layout-wide .tabs-tabs {
    margin: 0 4px;
}
/* base tab styles */
.tabs-tabs > a {
    --tab-shape-color: transparent;

    border-style: solid;
    border-width: 0 0 2px 0;
    border-color: var(--border-color);
    border-radius: 4px 4px 0 0;
    text-decoration: none;
    line-height: 1.7;
    padding: 0.125rem 8px 0 8px;
    margin: 0 2rem 0 0;
    white-space: nowrap;
    text-align: center;
    text-overflow: ellipsis;
}
/* current tab */
.tabs-tabs > a[aria-selected=true] {
    --border-color: var(--selected-color);
}
@media screen and (max-width: 34em) {
    .tabs-tabs {
        justify-content: space-around;
    }
    .tabs-tabs > a {
        margin: 0 4px 0 0; /* Prevent borders from abutting, which looks bad. */
        padding-left: 3%;
        padding-right: 3%;
        line-height: 2.0; /* Increases height so tabs are more tappable. */
    }
    .tabs-tabs > a + a {
    }
    .tabs-tabs > a:first-child {
    }
    .tabs-tabs > a:last-child {
        margin-right: 0;
    }
}

